--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -16,3 +16,7 @@ jobs:
         run: |
           node -v
           npm -v 
+      - name: day2 work
+        run: | 
+          lsb_release -a 
+          ps -aux
