--- a/.github/actions.yml
+++ b/.github/actions.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Simple JS Action 
+        id: greet 
         uses: actions/hello-world-javascript-action@v1
         with:
-        who-to-greet: jnan
+          who-to-greet: jnan
       - name: Log Greeting Time
-        run: echo "{{steps.greet.outputs.timegit }}"
+        run: echo "${{ steps.greet.outputs.Time }}"
