--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,6 +6,10 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps: 
+      - name: List Files
+        run: | 
+          pwd
+          ls
       - name: echo a string 
         run: echo "hellow world"
       - name: disk and memory
