--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -10,6 +10,12 @@ jobs:
         run: | 
           pwd
           ls
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: List Files after checkout
+        run: | 
+          pwd
+          ls -a
       - name: echo a string 
         run: echo "hellow world"
       - name: disk and memory
