--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -16,6 +16,10 @@ jobs:
         run: | 
           pwd
           ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo " {{ github.token }}"
       - name: echo a string 
         run: echo "hellow world"
       - name: disk and memory
